@@ -1818,6 +1818,8 @@ extended_remote_restart (void)
   xsnprintf (rs->buf, get_remote_packet_size (), "R%x", 0);
   putpkt (rs->buf);
 
+  remote_fileio_reset ();
+  
   /* Now query for status so this looks just like we restarted
      gdbserver from scratch.  */
   putpkt ("?");
@@ -2073,6 +2075,7 @@ remote_open_1 (char *name, int from_tty, struct target_ops *target,
 
   unpush_target (target);
 
+  remote_fileio_reset ();
   reopen_exec_file ();
   reread_symbols ();
 
